Updated package name & title

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "docs",
+  "name": "Seireiden",
   "version": "1.0.0",
   "description": "Documentaion for the projects",
   "main": "index.js",
